<?xml version="1.0"?>
<package format="2">
  <name>sss_data_generator</name>
  <version>0.0.0</version>
  <description>The sss_data_generator package</description>
  <maintainer email="nadelyaev2002@gmail.com">dub2</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
</package>

